--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "node index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
